src/main/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: microservice-demo
  labels:
    app.kubernetes.io/name: microservice-demo
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: microservice-demo
  type: ClusterIP
