src/main/k8s/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: search-service
  labels:
    app.kubernetes.io/name: search-service
spec:
  host: microservice-demo.apps.play.gepaplexx.com
  to:
    kind: Service
    name: microservice-demo
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
